# SPDX-FileCopyrightText: 2024 Project Caplan contributors
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "caplan"
version = "0.1.0"
edition = "2021"
license = "agpl-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.37.0", features = ["full"] }
axum = { version = "^0.7.5" }
hyper = { version = "^1.3.1", features = ["full"] }
hyper-rustls = { version = "^0.27.1" }
anyhow = "^1.0.82"
thiserror = "^1.0.59"
