# SPDX-FileCopyrightText: 2024 Project Caplan contributors
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "caplan"
version = "0.1.0"
edition = "2021"
license = "agpl-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.39.3", features = ["full"] }
axum = { version = "^0.7.5" }
hyper = { version = "^1.4.1", features = ["full"] }
hyper-rustls = { version = "^0.27.2" }
anyhow = "^1.0.86"
thiserror = "^1.0.63"
serde = { version = "1.0.200", features = ["derive"] }
clap = { version = "4.5.13", features = ["derive"] }

tracing = "^0.1.40"
tracing-subscriber = { version = "^0.3.18", features = ["env-filter"] }
tracing-stackdriver = "^0.10.0"
